--- a/index.html
+++ b/index.html
@@ -2,8 +2,23 @@
 <html>
     <head>
         <title> Quinn C. Kelley </title>
+        <link rel="stylesheet" type="text/css" href="normalize.css">
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
     <body>
-        QUINN C KELLEY
+        <div id = "wrapper">
+            <header>
+                <h1>QUINN CHUNGKAI KELLEY</h1>
+            </header>
+            
+            <div id = "images">
+                <img src="media/quinn1.jpg" alt="image" width="90%" height="90%">
+            </div>
+            <div id = "video">
+                <video controls>
+                    <source src="media/test.mp4" alt = "video" type ="video/mp4">
+                </video>
+            </div>
+        </div>
     <body>
 </html>
